traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:7: error: value update is not a member of Int
    if(getX()=0){
       ^TraversalZigZag:11: error: not enough arguments for method deplacementEst: (n: Int)Unit.
Unspecified value parameter n.
      deplacementEst()
                    ^TraversalZigZag:16: error: not enough arguments for method deplacementOUEST: (n: Int)Unit.
Unspecified value parameter n.
      deplacementOUEST()
                      ^TraversalZigZag:40: error: not found: value get
    setPos(getX()+1,get(Y))
                    ^TraversalZigZag:40: error: not found: value Y
    setPos(getX()+1,get(Y))
                        ^TraversalZigZag:41: error: reassignment to val
    n=n+1
     ^TraversalZigZag:48: error: not found: value get
    setPos(getX()-1,get(Y))
                    ^TraversalZigZag:48: error: not found: value Y
    setPos(getX()-1,get(Y))
                        ^TraversalZigZag:49: error: reassignment to val
    n=n+1
     ^