traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
  var n=0
  marque(n)
  setPos(1,0)
  n=1
  deplacementEst(1)
  while(!positionFinale){
    if(getX()=0){
      setPos(getX(),getY()+1)
      n=n+1
      marque(n)
      deplacementEst()
   } else {
      setPos(getX(),getY()+1)
      n=n+1
      marque(n)
      deplacementOUEST()
    
  }
  
 }
}


def positionFinale():Boolean = {
  if(getMondeHauteur()-1==getY() && getMondeLargeur()-1==getX()){
    return true
  } else {
    return false
  }
}



def marque(x:Int){
  ecritMessage(x)
}

def deplacementEst(n:Int){
  while(getMondeLargeur()-1!=getX()){
    setPos(getX()+1,get(Y))
    n=n+1
    marque(n)
  }
}

def deplacementOUEST(n:Int){
  while(0!=getX()){
    setPos(getX()-1,get(Y))
    n=n+1
    marque(n)
  }
}